--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,11 +3,22 @@
   <p>{{{get_emoji}}}</p>
   <p>{{description}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
+    <input type="text" name="comment" id="comment">
   <p>
     <button class="btn btn-primary" id = "edit-btn">Edit this Post!</button>
     <button class="btn btn-primary" data-post={{id}}  id="comment-btn">Comment on this Post!</button>
   </p>
-  <input type="text" name="comment" id="comment">
 </div>
+
+{{#if comments}}
+  <div class="comments">
+    <h3>Comments:</h3>
+    <ul>
+      {{#each comment_text}}
+        <li>{{this}}</li>
+      {{/each}}
+    </ul>
+  </div>
+{{/if}}
 
 <script src="/js/post.js"></script>
