added css colors

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -100,7 +100,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -153,7 +153,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   /* 1 */
   font-size: 100%;
   /* 1 */
@@ -163,11 +163,7 @@ textarea {
   /* 2 */
 }
 
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-button,
+abutton,
 input {
   /* 1 */
   overflow: visible;
@@ -356,8 +352,8 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  font-size: 16px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 18px;
   color: #1a1a1a;
 }
 
@@ -420,8 +416,9 @@ button {
 }
 
 a {
-  color: #1b89bc;
+  color: #152a33;
   text-decoration: none;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 a:hover {
@@ -937,7 +934,7 @@ a:hover {
 }
 
 .bg-white {
-  background-color: #ffffff !important;
+  background-color: #5bafc4 !important;
 }
 
 .bg-black {
