--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,9 +13,9 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        <span role="img" aria-label="blog">📑</span>
         
-<a href="/" style="text-align: center;">TECH BLOG!</a>
+<a href="/" style="text-align: center display-flex justify-space-between;">TECH BLOG!</a>
+<span role="img" aria-label="blog">📑</span>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
